--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             
             <div class="text-white text-sm">
                 <p style="font-size:0.9rem;">
-                © 1998-2025 SlopQuiz • Part of SlopTime Network</p>
+                © 1998-2025 SlopQuiz • Part of SlopTime Network • "Does It Slop" Animation by @hatguyvideo</p>
                 <p class="mt-2">
                     <a href="https://instagram.com/slop.time" target="_blank" class="hover:text-yellow-300"><i data-feather="instagram" class="inline mr-1"></i> Instagram</a> • 
                     <a href="https://tiktok.com/@sloptime" target="_blank" class="hover:text-yellow-300"><i data-feather="tiktok" class="inline mr-1"></i> TikTok</a> • 
