--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SlopQuiz - Test Your Slop Score!</title>
@@ -10,9 +8,9 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Comic+Sans+MS&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet');
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Comic Neue', cursive, sans-serif;
             background-color: #ff00ff;
             background-image: url('https://i.imgur.com/j9UIcYS.jpeg');
             color: #00ffff;
