--- a/slopong.html
+++ b/slopong.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
-
+ 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SLOPONG - The Official SlopTime Pong Game</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Comic+Sans+MS&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet');
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Comic Neue', cursive, sans-serif;
             background-color: #ff00ff;
             color: #00ffff;
             text-shadow: 3px 3px 0 #ff00ff;
