--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <a href="quiz-start.html">
                         <img src="https://i.imgur.com/ZYxbCT6.png" class="w-13 h-16 rounded-full border-4 border-yellow-400 hover:border-yellow-300 transition-colors">
                     </a>
-                    <p class="text-white">Top scorers get featured on SlopTime's Instagram story!</p>
+                    <p class="text-white">Top scorers get featured on SLOPTIME's Instagram story!*</p>
                 </div>
                 
                 <div class="bg-blue-900 p-4 rounded-lg">
