--- a/movie1.html
+++ b/movie1.html
@@ -1,31 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie 1</title>
+    <title>Tea on the Awning</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
-            width: 100%;
-            height: 100%;
             overflow: hidden;
-            background-color: black;
+            height: 100%;
         }
-        iframe {
-            position: absolute;
+        #video-container {
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            border: none;
+            overflow: hidden;
+        }
+        #my-video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+        }
+        #overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.4);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            transition: opacity 0.5s;
+        }
+        #play-button {
+            width: 80px;
+            height: 80px;
+            background: #fff;
+            border-radius: 50%;
+            border: 2px solid white;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: transform 0.3s;
+        }
+        #play-button::after {
+            content: '';
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 15px 0 15px 25px;
+            border-color: transparent transparent transparent black;
+        }
+        #play-button:hover {
+            transform: scale(1.1);
         }
     </style>
 </head>
 <body>
-    <iframe src="https://www.youtube.com/embed/QqanTUgvuCk?autoplay=1&controls=0&mute=1&loop=1&playlist=QqanTUgvuCk" frameborder="0" allowfullscreen></iframe>
+
+    <div id="video-container">
+        <!-- The `loop` attribute makes the video play continuously -->
+        <video id="my-video" muted playsinline loop>
+            <source src="tea on the awning.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <div id="overlay">
+        <div id="play-button"></div>
+    </div>
+
+    <script>
+        const video = document.getElementById('my-video');
+        const overlay = document.getElementById('overlay');
+
+        overlay.addEventListener('click', () => {
+            video.play();
+            video.muted = false;
+            overlay.style.opacity = 0;
+            setTimeout(() => {
+                overlay.style.display = 'none';
+            }, 500);
+        });
+    </script>
+
 </body>
 </html>
