--- a/slopong.html
+++ b/slopong.html
@@ -321,22 +321,27 @@ ctx.fillText(message, canvas.width / 2 - ctx.measureText(message).width/2, canva
         initCritters();
         gameLoop();
 </script>
- <audio id="background-music" src="Slime Squishes and Oozes Sound Effects.mp3" muted loop autoplay></audio>
+<audio id="background-music" src="Slime Squishes and Oozes Sound Effects.mp3" muted loop autoplay></audio>
 
 <script>
     const backgroundMusic = document.getElementById('background-music');
 
-    // This function will unmute the music after the first user interaction (click or scroll)
+    // This function will unmute the music after the first user interaction
     function enableSound() {
         backgroundMusic.muted = false;
+        backgroundMusic.play(); // Explicitly call .play() to resume playback
+        
         // The event listeners are removed after the first interaction
         window.removeEventListener('scroll', enableSound);
         document.removeEventListener('click', enableSound);
+        document.removeEventListener('touchstart', enableSound);
     }
 
-    // Add event listeners for scroll and click to the window and document
-    window.addEventListener('scroll', enableSound);
+    // Add event listeners for click, touch, and scroll to the document
     document.addEventListener('click', enableSound);
+    document.addEventListener('touchstart', enableSound);
+    window.addEventListener('scroll', enableSound);
 </script>
+
 </body>
 </html>
