--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
         <a href="movie1.html">
             <img src="https://i.imgur.com/DV2t6Lr.jpeg" width="245" height="286" alt="Movie 1">
         </a>
+        <a href="slopPG.html">
+            <img src="https://imgur.com/mS7JY5r" width="245" height="286" alt="slopPG">
+        </a>
     </div>
 </marquee>
         </div>
