--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <img src="https://i.imgur.com/DV2t6Lr.jpeg" width="245" height="286" alt="Movie 1">
         </a>
         <a href="slopPG.html">
-            <img src="https://imgur.com/mS7JY5r" width="245" height="286" alt="slopPG">
+            <img src="https://i.imgur.com/mS7JY5r.jpeg" width="245" height="286" alt="slopPG">
         </a>
     </div>
 </marquee>
