--- a/index.html
+++ b/index.html
@@ -219,16 +219,16 @@
             </div>
         </main>
         <div style="overflow: hidden; height: 202px; white-space: nowrap;">
-  <marquee behavior="scroll" direction="left" style="width: 100%; height: 202px;">
-    <div style="display: inline-flex;">
+  <marquee behavior="scroll" direction="left" style="width: 100%; height: 250px;">
+    <div style="display: inline-flex; align-items: center; height: 100%;">
         <a href="slopong.html" style="margin-right: 20px;">
-            <img src="https://i.imgur.com/g0jGXrt.jpeg" width="245" height="202" alt="SLOPONG Game">
+            <img src="https://i.imgur.com/g0jGXrt.jpeg" width="300" height="250" alt="SLOPONG Game">
         </a>
-        <a href="movie1.html">
-            <img src="https://i.imgur.com/DV2t6Lr.jpeg" width="245" height="286" alt="Movie 1">
+        <a href="movie1.html" style="margin-right: 20px;">
+            <img src="https://i.imgur.com/DV2t6Lr.jpeg" width="300" height="250" alt="Movie 1">
         </a>
-        <a href="slopPG.html">
-            <img src="https://i.imgur.com/mS7JY5r.jpeg" width="245" height="286" alt="slopPG">
+        <a href="slopPG.html" style="margin-right: 20px;">
+            <img src="https://i.imgur.com/mS7JY5r.jpeg" width="300" height="250" alt="slopPG">
         </a>
     </div>
 </marquee>
