--- a/slopPG.html
+++ b/slopPG.html
@@ -2,26 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pig Warlock: Slop Quest</title>
+  <title>SlopPG: Searching for the Stolen Slop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
       background: black;
       color: limegreen;
       font-family: monospace;
+      font-size: 2.5vw;
+      overflow-x: hidden;
+      text-align: center;
+    }
+
+    #game {
       white-space: pre;
-      font-size: 14px;
-      padding: 20px;
+      margin: 0 auto;
+      display: inline-block;
+    }
+
+    .controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 10px;
+      user-select: none;
+    }
+
+    .control-row {
+      display: flex;
+      justify-content: center;
+      margin: 5px;
+    }
+
+    .btn {
+      background: #111;
+      color: limegreen;
+      border: 2px solid limegreen;
+      font-size: 6vw;
+      width: 60px;
+      height: 60px;
+      margin: 4px;
+      border-radius: 10px;
+    }
+
+    @media (min-width: 768px) {
+      body {
+        font-size: 16px;
+      }
+      .btn {
+        font-size: 24px;
+        width: 60px;
+        height: 60px;
+      }
     }
   </style>
 </head>
 <body>
+
 <pre id="game"></pre>
+
+<div class="controls">
+  <div class="control-row">
+    <button class="btn" onclick="handleMove('ArrowUp')">↑</button>
+  </div>
+  <div class="control-row">
+    <button class="btn" onclick="handleMove('ArrowLeft')">←</button>
+    <button class="btn" onclick="handleMove('ArrowDown')">↓</button>
+    <button class="btn" onclick="handleMove('ArrowRight')">→</button>
+  </div>
+</div>
 
 <script>
 const TILE_W = 3;
 const TILE_H = 3;
-const GRID_W = 20;
-const GRID_H = 10;
+const GRID_W = 16;
+const GRID_H = 8;
 
 const EMPTY_TILE = [
   '   ',
@@ -47,7 +104,7 @@ const pigSprite = [
   '/ \\ '
 ];
 
-const farmerSprite = [
+const trooperSprite = [
   '[¬_¬]',
   '/|F|\\',
   '/ \\ '
@@ -56,8 +113,8 @@ const farmerSprite = [
 let map = [];
 let slops = [];
 
-let pig = { x: 1, y: 1 };
-let farmer = { x: GRID_W - 3, y: GRID_H - 3 };
+let jame = { x: 1, y: 1 };  // renamed pig
+let trooper = { x: GRID_W - 3, y: GRID_H - 3 };  // renamed farmer
 
 function createEmptyMap() {
   map = [];
@@ -65,7 +122,7 @@ function createEmptyMap() {
   for (let y = 0; y < GRID_H; y++) {
     let row = [];
     for (let x = 0; x < GRID_W; x++) {
-      if (x === 0 || y === 0 || x === GRID_W - 1 || y === GRID_H - 1 || Math.random() < 0.05) {
+      if (x === 0 || y === 0 || x === GRID_W - 1 || y === GRID_H - 1 || Math.random() < 0.06) {
         row.push([...WALL_TILE]);
       } else {
         row.push([...EMPTY_TILE]);
@@ -74,8 +131,8 @@ function createEmptyMap() {
     map.push(row);
   }
 
-  // Add slop
-  for (let i = 0; i < 5; i++) {
+  // Add slops
+  for (let i = 0; i < 6; i++) {
     let sx, sy;
     do {
       sx = Math.floor(Math.random() * (GRID_W - 2)) + 1;
@@ -103,17 +160,14 @@ function clearSprite(x, y) {
 }
 
 function render() {
-  // Copy map for rendering
   let display = map.map(row => row.map(tile => [...tile]));
 
-  // Place slops
   slops.forEach(slop => {
     display[slop.y][slop.x] = [...SLOP_TILE[0]];
   });
 
-  // Place pig and farmer
-  drawSprite(pig.x, pig.y, pigSprite);
-  drawSprite(farmer.x, farmer.y, farmerSprite);
+  drawSprite(jame.x, jame.y, pigSprite);
+  drawSprite(trooper.x, trooper.y, trooperSprite);
 
   let output = '';
   for (let y = 0; y < GRID_H; y++) {
@@ -126,7 +180,8 @@ function render() {
   }
 
   output += `\nSlops remaining: ${slops.length}`;
-  output += `\nMove with arrow keys. Collect the slop (~~). Avoid the Evil Farmer!`;
+  output += `\nYou are Jame, the Pig Warlock.`;
+  output += `\nAvoid the FDA VAX ENFORCEMENT TROOPER!`;
 
   document.getElementById('game').textContent = output;
 }
@@ -135,9 +190,7 @@ function tryMove(character, dx, dy) {
   const newX = character.x + dx;
   const newY = character.y + dy;
 
-  // Check bounds
   if (newX < 1 || newY < 1 || newX >= GRID_W - 1 || newY >= GRID_H - 1) return;
-
   if (isWall(newX, newY)) return;
 
   clearSprite(character.x, character.y);
@@ -145,47 +198,51 @@ function tryMove(character, dx, dy) {
   character.y = newY;
 }
 
-function moveFarmerTowardPig() {
-  const dx = Math.sign(pig.x - farmer.x);
-  const dy = Math.sign(pig.y - farmer.y);
-  tryMove(farmer, dx, dy);
+function moveTrooperTowardJame() {
+  const dx = Math.sign(jame.x - trooper.x);
+  const dy = Math.sign(jame.y - trooper.y);
+  tryMove(trooper, dx, dy);
 }
 
 function checkSlopCollection() {
-  slops = slops.filter(slop => !(slop.x === pig.x && slop.y === pig.y));
+  slops = slops.filter(slop => !(slop.x === jame.x && slop.y === jame.y));
   if (slops.length === 0) {
-    alert("Victory! The Pig Warlock has reclaimed all his slop!");
+    alert("Jame has reclaimed all the stolen slop! VICTORY!");
     createEmptyMap();
+    render();
   }
 }
 
-function checkFarmerCatch() {
-  if (pig.x === farmer.x && pig.y === farmer.y) {
-    alert("The Evil Farmer caught you! Game Over!");
+function checkTrooperCatch() {
+  if (jame.x === trooper.x && jame.y === trooper.y) {
+    alert("The FDA VAX ENFORCEMENT TROOPER has caught Jame! Game Over.");
     createEmptyMap();
+    render();
   }
 }
 
-document.addEventListener('keydown', (e) => {
+function handleMove(key) {
   let moved = false;
-  switch (e.key) {
-    case 'ArrowUp': tryMove(pig, 0, -1); moved = true; break;
-    case 'ArrowDown': tryMove(pig, 0, 1); moved = true; break;
-    case 'ArrowLeft': tryMove(pig, -1, 0); moved = true; break;
-    case 'ArrowRight': tryMove(pig, 1, 0); moved = true; break;
+  switch (key) {
+    case 'ArrowUp': tryMove(jame, 0, -1); moved = true; break;
+    case 'ArrowDown': tryMove(jame, 0, 1); moved = true; break;
+    case 'ArrowLeft': tryMove(jame, -1, 0); moved = true; break;
+    case 'ArrowRight': tryMove(jame, 1, 0); moved = true; break;
   }
 
   if (moved) {
     checkSlopCollection();
-    moveFarmerTowardPig();
-    checkFarmerCatch();
+    moveTrooperTowardJame();
+    checkTrooperCatch();
     render();
   }
-});
+}
+
+document.addEventListener('keydown', (e) => handleMove(e.key));
 
 createEmptyMap();
 render();
 </script>
+
 </body>
 </html>
-
