--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
         </main>
         <div style="overflow: hidden; height: 202px; white-space: nowrap;">
 
-    <div style="display: inline-flex; align-items: center; height: 100%;">
+   <div style="overflow-x: auto; white-space: nowrap;">
+    <div style="display: inline-flex; align-items: center;">
         <a href="slopong.html" style="margin-right: 60px;">
             <img src="https://i.imgur.com/g0jGXrt.jpeg" width="800" height="600" alt="SLOPONG Game">
         </a>
@@ -231,6 +232,7 @@
             <img src="https://i.imgur.com/mS7JY5r.jpeg" width="800" height="600" alt="slopPG">
         </a>
     </div>
+</div>
 
         </div>
 <!-- Footer -->
