--- a/index.html
+++ b/index.html
@@ -220,20 +220,20 @@
         </main>
         <div style="overflow: hidden; height: 202px; white-space: nowrap;">
 
-   <div style="overflow-x: auto; white-space: nowrap;">
-    <div style="display: inline-flex; align-items: center;">
-        <a href="slopong.html" style="margin-right: 60px;">
-            <img src="https://i.imgur.com/g0jGXrt.jpeg" width="800" height="600" alt="SLOPONG Game">
-        </a>
-        <a href="movie1.html" style="margin-right: 60px;">
-            <img src="https://i.imgur.com/DV2t6Lr.jpeg" width="600" height="450" alt="Movie 1">
-        </a>
-        <a href="slopPG.html" style="margin-right: 60px;">
-            <img src="https://i.imgur.com/mS7JY5r.jpeg" width="800" height="600" alt="slopPG">
-        </a>
-    </div>
+  <!-- Image scroll section -->
+<div style="overflow-x: auto; white-space: nowrap; padding-top: 2rem; padding-bottom: 2rem;">
+  <div style="display: inline-flex; align-items: center; justify-content: center; gap: 2rem; padding-left: 1rem; padding-right: 1rem;">
+    <a href="slopong.html">
+      <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="SLOPONG Game" style="max-width: 100%; height: auto; max-height: 600px;">
+    </a>
+    <a href="movie1.html">
+      <img src="https://i.imgur.com/DV2t6Lr.jpeg" alt="Movie 1" style="max-width: 100%; height: auto; max-height: 450px;">
+    </a>
+    <a href="slopPG.html">
+      <img src="https://i.imgur.com/mS7JY5r.jpeg" alt="slopPG" style="max-width: 100%; height: auto; max-height: 600px;">
+    </a>
+  </div>
 </div>
-
         </div>
 <!-- Footer -->
         <footer class="mt-8 text-center">
