--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <!-- Third Image with Label -->
     <div class="image-container">
       <a href="slopong.html">
-        <img src="https://i.imgur.com/mS7JY5r.jpeg" width="675" height="475">
+        <img src="https://i.imgur.com/Xvk410y.png" width="675" height="475">
       </a>
       <div class="label">slopong</div>
     </div>
