--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   .image-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: top;
     margin-right: 20px;
     position: relative;
   }
