--- a/slopPG.html
+++ b/slopPG.html
@@ -25,6 +25,7 @@
 
   <img src="report1.jpg" alt="Report one">
   <img src="report2.jpg" alt="Report two">
+  <img src="report3.jpg" alt="Report 3">
 
     <audio id="background-music" src="bgsound1.mp3" muted loop autoplay></audio>
 
