--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
  
         </main>
     
-<!-- This is the menu bar section -->       
 <style>
   /* Style for the container of each image and its label */
   .image-container {
@@ -265,11 +264,33 @@
     text-align: center;
     white-space: normal;
   }
+  
+  /* Container for the menu bar images, designed for mobile first */
+  .menu-bar {
+    overflow: hidden;
+    height: 300px;
+    white-space: nowrap;
+  }
+  .menu-bar-images {
+    display: inline-flex;
+    align-items: flex-end; /* Aligns to bottom for mobile */
+  }
+
+  /* Media query for desktop screens */
+  @media (min-width: 768px) {
+    .menu-bar {
+      height: auto; /* Allow height to adjust */
+      overflow: visible; /* Prevent content from being cut off */
+    }
+    .menu-bar-images {
+      align-items: flex-start; /* Aligns to top for desktop */
+    }
+  }
 </style>
 
 <!-- This is the menu bar section -->
-<div style="overflow: hidden; height: 300px; white-space: nowrap;">
-  <div style="display: inline-flex; align-items: flex-end;">
+<div class="menu-bar">
+  <div class="menu-bar-images">
     <!-- First Image with Label -->
     <div class="image-container">
       <a href="slopPG.html">
@@ -296,8 +317,14 @@
   </div>
 </div>
 
-    <div>
-        <head>
+  <div class="scroller">
+    <div class="scroller-inner">
+      <!-- Duplicate the image for a seamless loop -->
+      <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
+      <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
+    </div>
+  </div>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scrolling Image</title>
@@ -346,16 +373,6 @@
     }
   </style>
 </head>
-<body>
-
-  <div class="scroller">
-    <div class="scroller-inner">
-      <!-- Duplicate the image for a seamless loop -->
-      <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
-      <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
-    </div>
-  </div>
-
 </body>
     </div>
 
