--- a/slopPG.html
+++ b/slopPG.html
@@ -26,6 +26,7 @@
   <img src="report1.jpg" alt="Report one">
   <img src="report2.jpg" alt="Report two">
   <img src="report3.jpg" alt="Report 3">
+  <img src="report4.jpg" alt="Report 4">
 
     <audio id="background-music" src="bgsound1.mp3" muted loop autoplay></audio>
 
