--- a/quiz-start.html
+++ b/quiz-start.html
@@ -203,7 +203,7 @@
                 correct: 1
             },
             {
-                question: "سگ خوک آمریکایی نمی‌تواند راه برود زیرا شکمش روی زمین کشیده می‌شود",
+                question: "نها خواهند دانست",
                 image: "https://i.imgur.com/jEjwyKT.jpeg",
                 options: [
                     "آنها خواهند دانست",
