--- a/index.html
+++ b/index.html
@@ -56,6 +56,39 @@
             border: 2px dashed red;
         }
     </style>
+
+    <style>
+    .video-container {
+        position: relative;
+        width: 640px; /* Adjust width as needed */
+        height: 360px; /* Adjust height as needed */
+    }
+
+    .video-container video {
+        width: 100%;
+        height: 100%;
+    }
+
+    .play-button-overlay {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(0, 0, 0, 0.6);
+        color: white;
+        font-size: 3rem;
+        border: none;
+        border-radius: 50%;
+        width: 80px;
+        height: 80px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-left: 8px;
+    }
+</style>
+
 </head>
 <body class="min-h-screen">
     <!-- Animated Background with ASCII Pigs -->
@@ -317,14 +350,22 @@
   </div>
 </div>
 
+<div class="video-container">
+    <video id="game-video" poster="thumbnail.jpg">
+        <source src="game1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <button id="play-button" class="play-button-overlay">▶</button>
+</div>    
+    
   <div class="scroller">
     <div class="scroller-inner">
       <!-- Duplicate the image for a seamless loop -->
       <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
       <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
     </div>
-  </div>
-<head>
+  </div>   
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scrolling Image</title>
@@ -373,6 +414,22 @@
     }
   </style>
 </head>
+
+<script>
+    const video = document.getElementById('game-video');
+    const playButton = document.getElementById('play-button');
+
+    playButton.addEventListener('click', () => {
+        video.play();
+        playButton.style.display = 'none';
+    });
+
+    video.addEventListener('ended', () => {
+        playButton.style.display = 'flex';
+    });
+</script>
+
+    
 </body>
     </div>
 
