--- a/index.html
+++ b/index.html
@@ -58,15 +58,23 @@
     </style>
 
     <style>
+    body {
+        font-family: sans-serif;
+        text-align: center;
+    }
+
     .video-container {
         position: relative;
-        width: 640px; /* Adjust width as needed */
-        height: 360px; /* Adjust height as needed */
+        width: 100%; /* Use 100% of the parent container's width */
+        max-width: 640px; /* Limit the maximum width for larger screens */
+        margin: 20px auto;
+        aspect-ratio: 16 / 9; /* Sets the height automatically based on the width */
     }
 
     .video-container video {
         width: 100%;
         height: 100%;
+        object-fit: cover; /* Ensures the video fills the container without distortion */
     }
 
     .play-button-overlay {
@@ -88,6 +96,7 @@
         padding-left: 8px;
     }
 </style>
+
 
 </head>
 <body class="min-h-screen">
