--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
 
     .video-container {
         position: relative;
-        width: 100%; /* Use 100% of the parent container's width */
-        max-width: 640px; /* Limit the maximum width for larger screens */
+        width: 100%;
+        max-width: 640px; /* Limits the maximum width of the video player */
         margin: 20px auto;
-        aspect-ratio: 16 / 9; /* Sets the height automatically based on the width */
+        aspect-ratio: 16 / 9; /* Maintains 16:9 aspect ratio */
     }
 
     .video-container video {
         width: 100%;
         height: 100%;
-        object-fit: cover; /* Ensures the video fills the container without distortion */
+        object-fit: contain; /* Scales video to fit inside container without cropping */
     }
 
     .play-button-overlay {
@@ -95,7 +95,18 @@
         justify-content: center;
         padding-left: 8px;
     }
+
+    /* Media query to handle smaller mobile displays */
+    @media (max-width: 768px) {
+        .video-container {
+            width: 100%;
+        }
+        .video-container video {
+            object-fit: cover; /* Use cover on mobile to fill the screen */
+        }
+    }
 </style>
+
 
 
 </head>
