--- a/index.html
+++ b/index.html
@@ -378,13 +378,15 @@
     <button id="play-button" class="play-button-overlay">▶</button>
 </div>    
     
-  <div class="scroller">
-    <div class="scroller-inner">
-      <!-- Duplicate the image for a seamless loop -->
-      <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
-      <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
-    </div>
-  </div>   
+ <div class="scroller-inner">
+  <a href="gamevideo.html">
+    <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
+  </a>
+  <a href="gamevideo.html">
+    <img src="https://i.imgur.com/g0jGXrt.jpeg" alt="Scrolling image">
+  </a>
+</div>
+
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
