--- a/gamevideo.html
+++ b/gamevideo.html
@@ -11,6 +11,7 @@
             height: 100%;
             width: 100%;
             overflow: hidden; /* Hide scrollbars */
+            background-color: black; /* Optional: Sets a black background */
         }
         #gameVideo {
             position: fixed;
@@ -23,19 +24,10 @@
             z-index: -100; /* Puts the video in the background */
             transform: translate(-50%, -50%);
         }
-        /* Style for the video controls */
-        #gameVideo::-webkit-media-controls-panel {
-            display: flex;
-            opacity: 0; /* Hide controls by default */
-            transition: opacity 0.5s ease-in-out;
-        }
-        #gameVideo:hover::-webkit-media-controls-panel {
-            opacity: 1; /* Show controls on hover */
-        }
     </style>
 </head>
 <body>
-    <video autoplay loop id="gameVideo">
+    <video autoplay loop muted controls id="gameVideo">
         <source src="game1.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
