--- a/gamevideo.html
+++ b/gamevideo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Video</title>
+    <title>Slop Avenger(1997) Let's Play! | WR (0:33)</title>
     <style>
         body, html {
             margin: 0;
@@ -11,7 +11,7 @@
             height: 100%;
             width: 100%;
             overflow: hidden; /* Hide scrollbars */
-            background-color: black; /* Optional: Sets a black background */
+            background-color: black; /* Sets a black background */
         }
         #gameVideo {
             position: fixed;
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <video autoplay loop muted controls id="gameVideo">
+    <video loop muted controls id="gameVideo">
         <source src="game1.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
