--- a/gamevideo.html
+++ b/gamevideo.html
@@ -23,12 +23,11 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            min-width: 100%;
-            min-height: 100%;
-            width: auto;
-            height: auto;
+            width: 100%;
+            height: 100%;
             transform: translate(-50%, -50%);
             z-index: -1;
+            object-fit: contain; /* Scales video to fit inside container */
         }
         #overlay {
             position: fixed;
