--- a/index.html
+++ b/index.html
@@ -57,58 +57,6 @@
         }
     </style>
 
-    <style>
-    body {
-        font-family: sans-serif;
-        text-align: center;
-    }
-
-    .video-container {
-        position: relative;
-        width: 100%;
-        max-width: 640px; /* Limits the maximum width of the video player */
-        margin: 20px auto;
-        aspect-ratio: 16 / 9; /* Maintains 16:9 aspect ratio */
-    }
-
-    .video-container video {
-        width: 100%;
-        height: 100%;
-        object-fit: contain; /* Scales video to fit inside container without cropping */
-    }
-
-    .play-button-overlay {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: rgba(0, 0, 0, 0.6);
-        color: white;
-        font-size: 3rem;
-        border: none;
-        border-radius: 50%;
-        width: 80px;
-        height: 80px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding-left: 8px;
-    }
-
-    /* Media query to handle smaller mobile displays */
-    @media (max-width: 768px) {
-        .video-container {
-            width: 100%;
-        }
-        .video-container video {
-            object-fit: cover; /* Use cover on mobile to fill the screen */
-        }
-    }
-</style>
-
-
-
 </head>
 <body class="min-h-screen">
     <!-- Animated Background with ASCII Pigs -->
@@ -437,20 +385,7 @@
   </style>
 </head>
 
-<script>
-    const video = document.getElementById('game-video');
-    const playButton = document.getElementById('play-button');
-
-    playButton.addEventListener('click', () => {
-        video.play();
-        playButton.style.display = 'none';
-    });
-
-    video.addEventListener('ended', () => {
-        playButton.style.display = 'flex';
-    });
-</script>
-
+<!-- image -->
     
 </body>
     </div>
