--- a/slopong.html
+++ b/slopong.html
@@ -51,8 +51,8 @@ h1 {
     <h1>✧ SLOPONG  ✧</h1>
     <canvas id="gameCanvas"></canvas>
         <div class="controls">
-            <p>Use MOUSE to move your paddle (left side) | <a href="index.html">Back to SlopQuiz</a></p>
-        <p>First to 5 points wins! Battle against the Veggie Freaks!</p>
+            <p>Use MOUSE to move your trough | <a href="index.html">Back to SlopQuiz</a></p>
+        
 </div>
 <script>
         // Set canvas size based on window
